--- a/httdocs/common/css/style.css
+++ b/httdocs/common/css/style.css
@@ -3,299 +3,116 @@
   color: gray;
 }
 * {
-  out?line: solid 1px red;
+  outline: solid 1px red;
 }
 body {
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 20px;
+    width: 100%;
     padding: 5px;
-    background-color: greenyellow;
   }
-h1 {
-  font-size: 25px;
-  color: #fff;
-  background-color: #07575B;
-  border-radius: 10px;
-  padding: 10px;
-}
-p {
-  margin: 2px 0;
-}
-.spaceS {
-  margin: 10px 0;
-}
-.spaceM {
-  margin: 20px 0;
-}
-input {
-  width: 250px;
-  height: 3em;
-}
-.list {
-  width: 150px;
-}
-#container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  gap: 15px;
-  align-items: start;
-}
-.box {
-  color: #fff;
-  background-color: #90AFC5;
-  border-radius: 10px;
-  border: solid 1.5px #000;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-between;
-  min-height: 50px;
-  width: auto;
-  margin: 0;
-  flex-direction: column;
-  padding: 15px;
-}
-.inputBox {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding-bottom: 10px;
-}
-.btnSize {
-  text-align: center;
-  background: #2A3132;
-  width: 60px;
-  border-radius: 10px;
-  display: block;
-  margin: 5px 0;
-}
-button {
-  font-size: 20px;
-  color: #fff;
-  background: #763626;
-  width: 80px;
-  height: 2em;
-  border-radius: 10px;
-  margin-left: 5px;
-}
-.boxM {
-  background-color: #fff;
-  border-radius: 10px;
-  border: double 3px #2A3132;
-}
-.dateS, span {
-  font-size: 15px;
-}
-.snippetS {
-  font-size: 20px;
-  font-weight: bold;
-}
-.topM {
-  margin-top: 25px;
-}
-.showBtn {
-  width: 100px;
-}
-.posMain {
-  position: relative;
-}
-.posRight {
-  position: absolute;
-  right: 0;
-  bottom: 10px;
-}
-.posLeft {
-  justify-content: flex-start;
-}
-.btnBox {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 5px;
-}
-#hit, #text {
-  margin-left: 7px;
-}
-#cate, #cate2, #dateSort {
-  font-size: 20px;
-  color: #000;
-  background: #fff;
-  width: 200px;
-}
-.selectbox-2 {
-  position: relative;
-  margin: 5px 0 0 5px;
-}
-.selectbox-2::before,
-.selectbox-2::after {
-  position: absolute;
-  content: '';
-  pointer-events: none;
-}
-.selectbox-2::before {
-  right: 0;
-  display: inline-block;
-  width: 2.8em;
-  height: 2em;
-  border-radius: 0 10px 10px 0;
-  background-color: #90AFC5;
-  content: '';
-}
-.selectbox-2::after {
-  position: absolute;
-  top: 50%;
-  right: 1.4em;
-  transform: translate(50%, -50%) rotate(45deg);
-  width: 6px;
-  height: 6px;
-  border-bottom: 3px solid #fff;
-  border-right: 3px solid #fff;
-  content: '';
-}
-.selectbox-2 select {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  min-width: 230px;
-  height: 2em;
-  padding: .2em 3.6em .2em .8em;
-  border: 2px solid #90AFC5;
-  border-radius: 10px;
-  color: #333333;
-  font-size: 1em;
-  cursor: pointer;
-}
-.selectbox-2 select:focus {
-  outline: 1px solid #90AFC5;
-}
-.cancelBtn {
-  background: #763626;
-  width: 110px;
-  height: 2em;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  border: solid 1.5px #fff;
-  text-align: center;
-  border-radius: 10px;
-  margin: 5px
-}
-.bottomS {
-  margin-bottom: 10px;
-}
-.copyBtnSize {
-  width: 80px;
-  padding:5px 0;
-}
-.middleB div:first-child {
-  width: 100% !important;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.is-open {
-  max-height: 2000px;
-  background: #90AFC5;
-}
-.longBtn {
-  width: 100%;
-  margin: 5px 0 10px;
-  display: inline-block;
-}
-.snippet-content:has(#up) {
-  max-height: none !important;
-}
-.upClick {
-  min-height: 20px;
-}
-#up2 {
-  font-size: 17px;
-  width: 95%;
-  min-height: 100px;
-  height: auto;
-  padding: 5px;
-  margin: 0;
-}
-.inputOpen {
-  font-size: 17px;
-  width: 95%;
-  height: 2.5em;
-  padding: 5px;
-  transition: height 0.3s ease;
-  resize: none;
-  display: block;
-  overflow: hidden;
-  background: #fff;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-textarea.inputOpen.is-text-open {
-  height: 150px !important;
-  overflow-y: auto;
-}
-p.inputOpen {
-  height: auto;
-  min-height: 2.5em;
-  background: transparent;
-  border: none;
-}
-/* カード内のボタンエリア */
-.btnGroup {
-  display: flex;
-  gap: 5px;
-  margin-top: 10px;
-  width: 100%;
-}
-.btnGroup button {
-  flex: 1;
-  margin: 0;
-  font-size: 14px;
-}
-/* タイトルの文字サイズのみ */
-#nm ,.main-text{
-  font-size: 20px;
-}
-/* お気に入りの絵文字 */
-.pinBtnSize {
-  width: 150px;
-  padding:5px 0;
-}
 /* PC向けのレイアウト設定 */
 @media (min-width: 768px) {
   body {
-    display: grid;
-    grid-template-columns: 350px 1fr;
-    padding: 0;
-    margin: 0;
   }
   h1 {
-    width: 100%;
-    border-radius: 0;
-    grid-column: 1 / 3;
-    position: sticky;
-    top: 0;
-    padding: 0;
-    margin: 0;
   }
-  .boxM {
-    border: solid 5px #07575B;
-    margin-top: 10px;
-  }
-  #container {
-    margin-top: 25px;
 }
-  .wrapper {
-    width: 325px;
-    position: sticky;
-    top: 50px;
-    align-self: start;
-    margin: 0 auto;
-   }
-  .cancelBtn {
-    width: 120px;
-    height: 2.5em;
-    padding-left: 10px;
-    margin-left: 0;
+.header_section {
+  background-color: #0077CC;
+}
+.header_box {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.header_title{
+  color: #fff;
+  line-height: 1.5px;
+  padding: 18px 32px;
+}
+.search_box {
+  display: flex;
+  padding-right: 15px;
+}
+.search_input_area {
+}
+.search_input_text {
+  font-size: 18px;
+  width: 230px;
+  height: 35px;
+  border-right: none;
+  border-radius: 10px 0 0 10px;
+  padding-left: 10px;
+}
+.search_image {
+  width: 23px;
+  height: 23px;
+	mask-image: url(/httdocs/common/img/mushi.png);
+	mask-size: contain;
+	mask-repeat: no-repeat;
+	mask-position: center;
+  filter: brightness(0) saturate(100%) invert(100%) sepia(10%) saturate(7483%) hue-rotate(291deg) brightness(117%) contrast(86%);
+}
+.search_btn_area {
+}
+.search_btn {
+  color: #fff;
+  background-color: #003087;
+  font-size: 23px;
+  width: 125px;
+  height: 41px;
+  border-radius: 0 10px 10px 0;
+}
+.search_section {
+  display: flex;
+}
+.search_textBox {
+  padding-right: 15px;
+}
+.search_text {
+  color: #fff;
+  border-radius: 10px;
+  border: solid 1px #fff;
+}
+/* PC向けのレイアウト設定 */
+@media (min-width: 768px) {
+  .search_textBox {
+    padding: 0 10px;
   }
+  .search_text {
+  }
+}
+.side_box {
+  background-color: #E1F5FE;
+}
+.side_list, .side_list_category, .side_list_tag {
+  list-style: none;
+  padding: 0 0 0 20px;
+}
+.side_list_category, .side_list_tag {
+  color: #000;
+  font-size: 14px;
+  width: 260px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.side_icon {
+  color: #64B5F6;
+}
+.side_list_round {
+  color: #fff;
+  background-color: #0077CC;
+  border: solid 2px #B2EBF2;
+  border-radius: 10px;
+  box-shadow: 3px 3px 6px 3px #cfcfcf;
+  padding: 8px 10px;
+  margin: 5px;
+}
+.side_list_tag {
+}
+.side_list_line {
+  text-decoration: underline;
+  padding: 5px;
+  margin: 5px;
 }
