--- a/httdocs/common/css/style.css
+++ b/httdocs/common/css/style.css
@@ -9,7 +9,7 @@ body {
     font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 20px;
     width: 100%;
-    padding: 5px;
+    /* padding: 0; */
   }
 /* PC向けのレイアウト設定 */
 @media (min-width: 768px) {
@@ -25,11 +25,14 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  padding: 10px;
 }
 .header_title{
   color: #fff;
-  line-height: 1.5px;
-  padding: 18px 32px;
+  font-size: 30px;
+  line-height: 1;
+  padding: 18px 32px 10px;
+  margin-right: 15px;
 }
 .search_box {
   display: flex;
@@ -38,9 +41,10 @@ body {
 .search_input_area {
 }
 .search_input_text {
+  background-color: #fff;
   font-size: 18px;
   width: 230px;
-  height: 35px;
+  height: 41px;
   border-right: none;
   border-radius: 10px 0 0 10px;
   padding-left: 10px;
@@ -63,9 +67,15 @@ body {
   width: 125px;
   height: 41px;
   border-radius: 0 10px 10px 0;
+  padding-left: 25px;
 }
 .search_section {
   display: flex;
+}
+@media (min-width: 768px) {
+  .search_section {
+    display: none;
+  }
 }
 .search_textBox {
   padding-right: 15px;
@@ -74,6 +84,7 @@ body {
   color: #fff;
   border-radius: 10px;
   border: solid 1px #fff;
+  padding: 10px;
 }
 /* PC向けのレイアウト設定 */
 @media (min-width: 768px) {
@@ -83,12 +94,47 @@ body {
   .search_text {
   }
 }
+.line_top, .line_center, .line_bottom {
+  width: 5px;
+  height: 3px;
+  background-color: #0077CC;
+}
+#ham_box {
+  background-color: #fff;
+  border: solid 1px #fff;
+  width: 5px;
+  height: 5px;
+}
+#main_container {
+  background-color: #003087;
+  width: 100%;
+  display: flex;
+}
+@media (min-width: 768px) {
+  #main_container {
+  }
+}
+#side_section {
+  width: 100%;
+}
+@media (min-width: 768px) {
+  #side_section {
+    /* visibility: hidden; */
+  }
+}
 .side_box {
   background-color: #E1F5FE;
+  width: 420px;
 }
 .side_list, .side_list_category, .side_list_tag {
   list-style: none;
   padding: 0 0 0 20px;
+}
+.side_list {
+  padding-top: 20px;
+}
+.side_list_space {
+  padding-bottom: 40px;
 }
 .side_list_category, .side_list_tag {
   color: #000;
@@ -115,4 +161,7 @@ body {
   text-decoration: underline;
   padding: 5px;
   margin: 5px;
+}
+#wrapper {
+
 }
