--- a/httdocs/common/css/style.css
+++ b/httdocs/common/css/style.css
@@ -183,19 +183,29 @@ body {
   width: 100%;
   /* height: 123px; */
   display: flex;
+  gap: 30px;
   /* 稼働確認用 不要に削除してね*/
   border: #000 3px solid;
+}
+.category_box {
+  padding: 30px 60px;
 }
 .category_imageBox {
   width: 100px;
   height: 123px;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
+}
+.category_image {
 }
 .category_img {
   width: 64px;
   height: 64px;
-  margin: auto;
 }
 #wrapper {
+}
+button {
+  width: 50px;
 }
