--- a/httdocs/common/css/style.css
+++ b/httdocs/common/css/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c');
-
   /* レスポンシブ
      PC:769px以上  / スマホ:768px以下*/
-
 * {
   outline: solid 1px red;
 }
@@ -19,6 +17,8 @@ body {
   h1 {
   }
 }
+/* ヘッダー */
+/* ヘッダー */
 .header_section {
   background-color: #0077CC;
 }
@@ -112,6 +112,8 @@ body {
   width: 5px;
   height: 5px;
 }
+/* サイドメニュー */
+/* サイドメニュー */
 #main_container {
   background-color: #fff;
   width: 100%;
@@ -178,7 +180,8 @@ body {
   padding: 5px;
   margin: 5px;
 }
-/* メイン画面 */
+/* カテゴリーアイコン */
+/* カテゴリーアイコン */
 .category_box {
   width: 100%;
   /* height: 123px; */
@@ -221,6 +224,8 @@ body {
   width: 270px;
   height: 75px;
 }
+/* コード一覧 */
+/* コード一覧 */
 .result-textBox{
   padding: 10px;
 }
