--- a/httdocs/common/css/style.css
+++ b/httdocs/common/css/style.css
@@ -113,10 +113,10 @@ body {
   height: 5px;
 }
 /* サイドメニュー */
-/* サイドメニュー */
 #main_container {
   background-color: #fff;
   width: 100%;
+  max-width: 1440px;
   display: flex;
 }
 @media (max-width: 768px) {
@@ -124,7 +124,7 @@ body {
   }
 }
 #side_section {
-  width: 420px;
+  width: 100%;
 }
 @media (max-width: 768px) {
   #side_section {
@@ -182,13 +182,16 @@ body {
 }
 /* カテゴリーアイコン */
 /* カテゴリーアイコン */
+.main-section {
+  width: 100%;
+}
 .category_box {
   width: 100%;
   /* height: 123px; */
   display: flex;
   gap: 30px;
   /* 稼働確認用 不要に削除してね*/
-  border: #000 3px solid;
+  border: red 3px solid;
 }
 .category_box {
   padding: 30px 60px;
@@ -224,9 +227,16 @@ body {
   width: 270px;
   height: 75px;
 }
-/* コード一覧 */
-/* コード一覧 */
+/* 販売コード一覧 */
+.result-cardBox {
+  display: flex;
+  border: solid 5px #000;
+}
+.result-box{
+  width: 100%;
+}
 .result-textBox{
+  width: 100%;
   padding: 10px;
 }
 .result-card{
